--- a/prueba-full-stack/package.json
+++ b/prueba-full-stack/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "bootstrap": "^5.2.2",
+    "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
