--- a/prueba-full-stack/package.json
+++ b/prueba-full-stack/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0"
   }
 }
